--- a/app.json
+++ b/app.json
@@ -1,17 +1,21 @@
 {
   "expo": {
-    "name": "interview",
-    "slug": "interview",
+    "name": "Assessment Jing En",
+    "slug": "assessment-jing-en",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/app_icon.png",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/init_screen.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#ecca00"
     },
+    "platforms": [
+      "ios",
+      "android"
+    ],
     "updates": {
-      "fallbackToCacheTimeout": 0
+      "fallbackToCacheTimeout": 5000
     },
     "assetBundlePatterns": [
       "**/*"
@@ -22,8 +26,9 @@
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#FFFFFF"
-      }
+        "backgroundColor": "#ecca00"
+      },
+      "package": "com.jingen11.assessmentjingen"
     },
     "web": {
       "favicon": "./assets/favicon.png"
